--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "webrtc-signaling-server",
+  "version": "1.0.0",
   "type": "module",
+  "main": "server/index.js",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "scripts": {
+    "start": "node server/index.js"
   }
 }
