--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "webrtc-demo",
   "version": "1.0.0",
-  "description": "Simple WebRTC demo with multiple peers",
+  "description": "Simple multi-user WebRTC demo",
   "main": "server-index.js",
   "scripts": {
     "start": "node server-index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.5"
   }
 }
