--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "webrtc-signaling-server",
+  "name": "webrtc-demo",
   "version": "1.0.0",
-  "type": "module",
-  "main": "server/index.js",
+  "main": "server-index.js",
+  "scripts": {
+    "start": "node server-index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
-  },
-  "scripts": {
-    "start": "node server/index.js"
+    "socket.io": "^4.7.5"
   }
 }
