--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "webrtc-signaling-server",
   "version": "1.0.0",
-  
+  "type": "module"
+
   "main": "server/index.js",
   "dependencies": {
     "express": "^4.18.2",
